tests/abstract-locations-saved-state/abstract-locations-saved-state.exp
Error ------------------------------------------------------------------------------------------------------ foo.js:3:21

Missing type annotation for `x`.

   3| export function foo(x) { return x; }
                          ^


Error ------------------------------------------------------------------------------------------------------ foo.js:3:21

Failed to build a typed interface for this module. The exports of this module must be annotated with types. Missing type
annotation at array pattern: (`signature-verification-failure`)

   3| export function foo(x) { return x; }
                          ^


Error ------------------------------------------------------------------------------------------------------ foo.js:3:23

Failed to build a typed interface for this module. The exports of this module must be annotated with types. Missing type
annotation at function return: (`signature-verification-failure`)

   3| export function foo(x) { return x; }
                            



Found 3 errors
